Changelog for HLint

    #319, don't remove lambdas on the right of infix operators
1.7.1
    Add a --quiet flag, to supress stdout (mainly for API users)
1.7
    Add support for HLint.Builtin.All
    Fix crash on (\x -> x)
    Make the library correctly honour the data directory
    Improve the manual, mainly language changes and hyperlinking
    Fix a bug in ListRec, could have _recursive_ in the result
    #315, spot list rec hints through $ and let
    Add hints based on (f $) ==> f, and change in ListRec hints
    Changes to the lambda suggestions, now gives a few more hints
    Don't suggest importing modules in old-locale/old-time
    Make the API return the suggestions, rather than just the count
    #278, add -XNoCpp to disable the C preprocessor
    #279, add -XExt/-XNoExt to choose extensions
    Remove some redundant brackets in type replacements
    #286, remove redundant brackets in match
    Additional bracket removal, application under sections
    #299, rework hints to use flip (suggest infix in some cases)
    Add some fromMaybe hints
    Fix bug where hints didn't always get names
    #306, make --find use the hints if there are files specified
    Upgrade to haskell-src-exts-1.9
    #303, allow fixities to be specified in hint files
1.6.21
    #287, warn about Haskell 98 imports
    #297, add a hint to use mplus
    #288, detect redundant brackets under a lambda
    #302, remove error about ambiguous fixities
    #281, enhance the redundant monad return warnings
    #293, eliminate _noParen_ from the result
    #284, eliminate ViewPatterns from FindHints, hits compiler bug
    #283, don't suggest removal of RecordWildCards
    Add some hints about concat and (++)
    #273, require haskell-src-exts >= 1.8.2
1.6.20
    #275, add more acknowledgements (still very incomplete)
    #254, remove the foldr1/map hint
    Compress nested lambdas, \x -> \y -> ... ==> \x y -> ...
    Fix minor bug on \x -> \x -> foo x x